updated ww to work in java 17 with jogl 2.6 and jackson 2.17 form com.fasterxml